Update GC note.